@@ -1,4 +1,4 @@
 DIST k3bmonkeyaudioplugin-3.1.tar.bz2 453123 RMD160 0bfa71245e43f517d75e6ccc65a73927153fda44 SHA1 bd3712ed60667a4595b09ab053cf411aefaa78b1 SHA256 b645d67f8eef2e1f5097fa06ce2764ff03229415fefc91be55d2b097cf0b913f
-EBUILD k3bmonkeyaudioplugin-3.1.ebuild 782 RMD160 c4cccfd96b6da4a04151beac540a79084cc3ee91 SHA1 c80e6f670f9df490083a65cc0da99d6be72f9b42 SHA256 5bb4e3338023fdd89cdd3a2e7b58e6e77a28be50231cbdab656768071ccb7b3a
-MISC ChangeLog 417 RMD160 21e2c3b6a2f2cb73b1981354553fb072f2d501f9 SHA1 4e1935b7eb6e3719602978ed8789fb682c3a82c4 SHA256 5dac02d996454c2ce5383ee493774d8ddd71f1e97075e4d63511201799553fce
+EBUILD k3bmonkeyaudioplugin-3.1.ebuild 740 RMD160 a3e8e24a552cf4be93f658a78e4594288135d5a9 SHA1 6bdafa908f927c490d6472a1fcac076aaf6a095b SHA256 5d308af670631155840b0457a1963a86328d2e8527076a300033c788731960ff
+MISC ChangeLog 542 RMD160 cbcee9ece980822cf22d46c196cc67adafdadbc6 SHA1 64a36a0dab56056ef61cbb9e745f54276b7c4793 SHA256 d61af1fc17d150293d7844da3e2305852408607e59e733bc82eda75b880f1139
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
